[package]
name = "ppm-server"
version = "0.5.0"
authors = ["dpapin1118 <denis.pro@isd.lu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
rocket = "0.4.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.12.0"
lazy_static = "1.4.0"
rs-uuid = "0.3.1"
log = "0.4"
log4rs = "0.11.0"
rocket_okapi = "0.5.1"
schemars = "0.7"
okapi = { version = "0.4", features = ["derive_json_schema"] }
java-properties = "1.2.0"
obfstr = "0.2"

uuid = "^0.5"
#lazy_static = "^0.2"
rust-crypto = "0.2.36"
rand = "0.7.3"
rustc-serialize = "0.3.24"

serde-xml-rs = "0.4.0"
xml-rs = "0.8.3"
csv = "1.1.3"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json","handlebars_templates", "tera_templates"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false

#[build]
#incremental = true